--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^8.0.4",
     "awesome-typescript-loader": "^3.4.1",
     "markdown-it": "^8.4.1",
+    "markdown-it-table": "^1.0.4",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.7.2"
   },
