--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-it-anchor": "^4.0.0",
     "markdown-it-table": "^1.0.4",
     "markdown-it-table-of-contents": "^0.3.3",
+    "path": "^0.12.7",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.7.2"
   },
