--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^8.0.4",
     "awesome-typescript-loader": "^3.4.1",
     "handlebars": "^4.0.11",
+    "highlightjs": "^9.10.0",
+    "katex": "^0.9.0",
     "markdown-it": "^8.4.1",
     "markdown-it-anchor": "^4.0.0",
     "markdown-it-table": "^1.0.4",
